--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,24 @@
-version: '3.7'
+version: '3.8'
 
 services:
-  proxy:
-    image: nginx:alpine
-    container_name: proxy
-    ports:
-      - '80:80'
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    restart: 'unless-stopped'
-    networks:
-      - backend
-  server:
-    build:
-      context: ./
-      target: development-build-stage
-      dockerfile: Dockerfile
-    container_name: server
-    ports:
-      - '3000:3000'
-    volumes:
-      - ./:/app
-      - /app/node_modules
-    restart: 'unless-stopped'
-    networks:
-      - backend
-    links:
-      - mysql
-    depends_on:
-      - mysql
   mysql:
-    image: mysql:5.7
+    image: mysql:8.0
     container_name: mysql
     environment:
       MYSQL_ROOT_USER: root
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: test
+      MYSQL_DATABASE: barefoot
     ports:
-      - '3306:3306'
+      - '3308:3306'
     networks:
       - backend
+    volumes:
+      - mysql_data:/var/lib/mysql
 
 networks:
   backend:
     driver: bridge
 
 volumes:
-  data:
-    driver: local
+  mysql_data:
+
