--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 PORT=5000
 
 # DATABASE
-DATABASE_URL=mysql://root:password@localhost:3308/barefoot
+DATABASE_URL=mysql://root:password@127.0.0.1:3307/delivery_app
 
 # TOKEN
 SECRET_KEY=secretKey
