--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     environment:
       MYSQL_ROOT_USER: root
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: barefoot
+      MYSQL_DATABASE: delivery_app
     ports:
-      - '3308:3306'
+      - '3307:3306'
     networks:
       - backend
     volumes:
