feat: build api change password via otp send email

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,9 @@ LOG_DIR=../logs
 # CORS
 ORIGIN=*
 CREDENTIALS=true
+
+# Email 
+MAIL_HOST=smtp.ethereal.email
+MAIL_PORT=587
+EMAIL_FROM=demond.gislason@ethereal.email
+EMAIL_PASSWORD=kEyv5Zz2w4MkZFrwPK
